# dirmake

./: CMakeLists.txt  PACKAGING.md  README.md  TyTextGUI.spec  common.c  generated.c  generated_text_vars_dynamic.c  generated_text_vars_preserved.c  main.c  test  test.pub  ty_text.csv  ty_text_dynamic.csv  ty_text_extractor.spec  ty_text_out.csv  ty_text_preserved.csv  ty_text_utf8hex.csv  ty_text_with_pos.csv  ty_text_with_pos_utf8hex.csv
DirModeEx/: .gitignore  CMakeLists.txt  DirModeEx.pro  csv_lang_plugin.cpp  csv_lang_plugin.h  csv_parser.cpp  csv_parser.h  diff_utils.cpp  diff_utils.h  disp_errors.csv  language_settings.cpp  language_settings.h  main.cpp  mainwindow.cpp  mainwindow.h  text_extractor.cpp  text_extractor.h  ty_text_arrays.csv  ty_text_cn.csv  ty_text_out.csv
DirModeEx/docs/: CommentingGuide.md  DataIntegrity.md
DirModeEx/logs/: csv_lang_plugin_disp_errors.diff  csv_lang_plugin_errors_disp_errors.diff  csv_lang_plugin_ty_text_arrays_arrays.diff  disp_errors.csv
DirModeEx/reports/: comment_coverage.md  comment_style.md
DirModeEx/scripts/: gen_py_project.py
DirModeEx/tests/demo_proj/: disp_errors.csv  ty_text_arrays.csv  ty_text_cn.csv  ty_text_out.csv
DirModeEx/tests/demo_proj/csv_import_sandbox/src/: demo.c  demo2.c
DirModeEx/tests/demo_proj/include/: tr_text.h
DirModeEx/tests/demo_proj/logs/: csv_lang_plugin.diff  csv_lang_plugin_ty_text_arrays_arrays.diff  csv_lang_plugin_ty_text_out.diff
DirModeEx/tests/demo_proj/src/: demo.c  demo2.c
DirModeEx/tests/python_demo_proj/: ty_text_out.csv
DirModeEx/tests/python_demo_proj/include/: tr_text.h
DirModeEx/tests/python_demo_proj/src/: demo.c  demo2.c  demo3.c
DirModeEx/tests/python_large_proj/: ty_text_out_part01.csv  ty_text_out_part02.csv  ty_text_out_part03.csv
DirModeEx/tests/python_large_proj/src/: demo2.c  huge.c
DirModeEx/tools/: comment_report.py  comment_style_check.py  ty_text_arrays.csv
build-DME/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MyCProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  my_program.vcxproj  my_program.vcxproj.filters
build-DirModeEx-VS/: CMakeCache.txt
docs/: DirModeEx_README.md  ui_paging.md
gui_app/: main.py  qt_compat.py  runner.py  ui.py
include/: common.h  generated_text_vars_dynamic.h  m_math.h  tr_text.h  utils.h
packaging/: build_dir_mode_ex_win7.ps1  build_dir_mode_ex_win7_mingw.ps1  build_win7.ps1
src/: common.c  main.c  person_common.c
src/cjson/: cJSON.c
(+48 files in other folders)
